# Banking-project-python

./: .gitignore  README.md  bankingproject_v2.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_banking.py
