[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "banking-cli"
version = "0.1.0"
description = "Secure CLI banking demo with SQLite and PBKDF2"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Dhyan Patel" }]
dependencies = []
optional-dependencies.dev = ["pytest"]

[tool.setuptools]
py-modules = ["bankingproject_v2"]   # <- single-file module name (no .py)

[project.scripts]
banking = "bankingproject_v2:main"
